--- a/Comic Art/Base.lproj/Main.storyboard
+++ b/Comic Art/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="AzS-VP-Fro">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="MainViewController" customModule="Comic_Art" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,122 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="wG8-F3-QIV">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wG8-F3-QIV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="88X-jy-SZ1"/>
+                            <constraint firstAttribute="trailing" secondItem="wG8-F3-QIV" secondAttribute="trailing" id="fVU-vI-aSL"/>
+                            <constraint firstItem="wG8-F3-QIV" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="ouA-yI-i86"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wG8-F3-QIV" secondAttribute="bottom" id="owY-Lx-cnf"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="0yx-Kt-nSk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="oc6-2d-zWS">
+                            <connections>
+                                <segue destination="UYc-KA-P3H" kind="show" id="zaU-z0-OR6"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="wG8-F3-QIV" id="PX4-ZQ-XiM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="840.79999999999995" y="122.78860569715144"/>
+        </scene>
+        <!--Art View Controller-->
+        <scene sceneID="jaa-ec-qY1">
+            <objects>
+                <viewController id="UYc-KA-P3H" customClass="ArtViewController" customModule="Comic_Art" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="cqh-qI-Asz"/>
+                        <viewControllerLayoutGuide type="bottom" id="WwK-Ez-DNo"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HiX-cz-HBK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sonic.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="1Ww-wR-ocr">
+                                <rect key="frame" x="87" y="84" width="200" height="300"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="Qk8-Uw-ldv"/>
+                                    <constraint firstAttribute="height" constant="300" id="kY4-V8-FhA"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cCs-cW-2Nh">
+                                <rect key="frame" x="87.5" y="394" width="200" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Loc-hb-TYE">
+                                <rect key="frame" x="172" y="434" width="30" height="30"/>
+                                <state key="normal" title="Add"/>
+                                <connections>
+                                    <action selector="addTapped:" destination="UYc-KA-P3H" eventType="touchUpInside" id="hAA-Fv-AsJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="cCs-cW-2Nh" firstAttribute="width" secondItem="1Ww-wR-ocr" secondAttribute="width" id="KjP-BY-GHa"/>
+                            <constraint firstItem="1Ww-wR-ocr" firstAttribute="top" secondItem="cqh-qI-Asz" secondAttribute="bottom" constant="20" id="etu-8y-Eaq"/>
+                            <constraint firstItem="Loc-hb-TYE" firstAttribute="top" secondItem="cCs-cW-2Nh" secondAttribute="bottom" constant="10" id="gA0-r2-zii"/>
+                            <constraint firstItem="Loc-hb-TYE" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="hAq-qS-Zo1"/>
+                            <constraint firstItem="cCs-cW-2Nh" firstAttribute="top" secondItem="1Ww-wR-ocr" secondAttribute="bottom" constant="10" id="hrk-NW-cyf"/>
+                            <constraint firstItem="1Ww-wR-ocr" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="m4W-r2-Pdp"/>
+                            <constraint firstItem="cCs-cW-2Nh" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="qqI-ZI-iiX"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="YN3-ZV-MKR">
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="camera" id="s1t-FH-vYj">
+                                <connections>
+                                    <action selector="cameraTapped:" destination="UYc-KA-P3H" id="Fyc-bD-aMf"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem title="Photos" id="1pi-sK-NZY">
+                                <connections>
+                                    <action selector="photosTapped:" destination="UYc-KA-P3H" id="vue-vD-cSV"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="artImage" destination="1Ww-wR-ocr" id="Kfn-3C-EbS"/>
+                        <outlet property="titleTextField" destination="cCs-cW-2Nh" id="sIS-gx-VS7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ssA-BM-W8j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1623" y="123"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cI4-Vk-jHc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AzS-VP-Fro" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="79s-fx-3lT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wgH-Pg-wJv"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="EaB-Qj-A9g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-42" y="123"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="sonic.jpg" width="400" height="608"/>
+    </resources>
 </document>
