--- a/Comic Art/Base.lproj/Main.storyboard
+++ b/Comic Art/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--Comic Art Collector-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="MainViewController" customModule="Comic_Art" customModuleProvider="target" sceneMemberID="viewController">
@@ -35,10 +35,11 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="wG8-F3-QIV" secondAttribute="bottom" id="owY-Lx-cnf"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="0yx-Kt-nSk">
+                    <navigationItem key="navigationItem" title="Comic Art Collector" id="0yx-Kt-nSk">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="aGk-es-6hu"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="oc6-2d-zWS">
                             <connections>
-                                <segue destination="UYc-KA-P3H" kind="show" id="zaU-z0-OR6"/>
+                                <segue destination="UYc-KA-P3H" kind="show" identifier="artSegue" id="zaU-z0-OR6"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -62,35 +63,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sonic.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="1Ww-wR-ocr">
-                                <rect key="frame" x="87" y="84" width="200" height="300"/>
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" semanticContentAttribute="spatial" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img.jpg" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1Ww-wR-ocr">
+                                <rect key="frame" x="87" y="114" width="200" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Qk8-Uw-ldv"/>
                                     <constraint firstAttribute="height" constant="300" id="kY4-V8-FhA"/>
                                 </constraints>
                             </imageView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cCs-cW-2Nh">
-                                <rect key="frame" x="87.5" y="394" width="200" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Loc-hb-TYE">
-                                <rect key="frame" x="172" y="434" width="30" height="30"/>
+                                <rect key="frame" x="172" y="424" width="30" height="30"/>
                                 <state key="normal" title="Add"/>
                                 <connections>
                                     <action selector="addTapped:" destination="UYc-KA-P3H" eventType="touchUpInside" id="hAA-Fv-AsJ"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nng-nk-Hbt">
+                                <rect key="frame" x="165.5" y="464" width="45" height="30"/>
+                                <state key="normal" title="Delete"/>
+                                <connections>
+                                    <action selector="deleteTapped:" destination="UYc-KA-P3H" eventType="touchUpInside" id="rFs-Nj-6di"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cCs-cW-2Nh">
+                                <rect key="frame" x="87" y="74" width="200" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" returnKeyType="done"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="Nng-nk-Hbt" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="1eM-Y6-Yai"/>
+                            <constraint firstItem="Loc-hb-TYE" firstAttribute="top" secondItem="1Ww-wR-ocr" secondAttribute="bottom" constant="10" id="95R-Zo-vrD"/>
                             <constraint firstItem="cCs-cW-2Nh" firstAttribute="width" secondItem="1Ww-wR-ocr" secondAttribute="width" id="KjP-BY-GHa"/>
-                            <constraint firstItem="1Ww-wR-ocr" firstAttribute="top" secondItem="cqh-qI-Asz" secondAttribute="bottom" constant="20" id="etu-8y-Eaq"/>
-                            <constraint firstItem="Loc-hb-TYE" firstAttribute="top" secondItem="cCs-cW-2Nh" secondAttribute="bottom" constant="10" id="gA0-r2-zii"/>
+                            <constraint firstItem="cCs-cW-2Nh" firstAttribute="top" secondItem="cqh-qI-Asz" secondAttribute="bottom" constant="10" id="NZT-Yl-n9z"/>
+                            <constraint firstItem="Nng-nk-Hbt" firstAttribute="top" secondItem="Loc-hb-TYE" secondAttribute="bottom" constant="10" id="cq7-Vx-Mfd"/>
                             <constraint firstItem="Loc-hb-TYE" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="hAq-qS-Zo1"/>
-                            <constraint firstItem="cCs-cW-2Nh" firstAttribute="top" secondItem="1Ww-wR-ocr" secondAttribute="bottom" constant="10" id="hrk-NW-cyf"/>
                             <constraint firstItem="1Ww-wR-ocr" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="m4W-r2-Pdp"/>
+                            <constraint firstItem="1Ww-wR-ocr" firstAttribute="top" secondItem="cCs-cW-2Nh" secondAttribute="bottom" constant="10" id="oqi-Sb-KNH"/>
                             <constraint firstItem="cCs-cW-2Nh" firstAttribute="centerX" secondItem="HiX-cz-HBK" secondAttribute="centerX" id="qqI-ZI-iiX"/>
                         </constraints>
                     </view>
@@ -109,7 +119,9 @@
                         </rightBarButtonItems>
                     </navigationItem>
                     <connections>
+                        <outlet property="addUpdateButton" destination="Loc-hb-TYE" id="Dcs-jW-Eos"/>
                         <outlet property="artImage" destination="1Ww-wR-ocr" id="Kfn-3C-EbS"/>
+                        <outlet property="deleteButton" destination="Nng-nk-Hbt" id="olA-Xj-0YE"/>
                         <outlet property="titleTextField" destination="cCs-cW-2Nh" id="sIS-gx-VS7"/>
                     </connections>
                 </viewController>
@@ -137,6 +149,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="sonic.jpg" width="400" height="608"/>
+        <image name="img.jpg" width="200" height="300"/>
     </resources>
 </document>
